ADD 'Rating' component

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Course Project</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Quicksand:500,700,400&display=swap"
       rel="stylesheet"
+      type="text/css"
     />
   </head>
   <body>
